# cc-comp-test

./: .bazelrc  .clang-format  .gitignore  BUILD  BUILD.bazel  Dockerfile  LICENSE  README.md  WORKSPACE  cc_comp_test.bzl
.devcontainer/: devcontainer.json  post-start.sh
.github/workflows/: main.yml
bazel_impl/: BUILD  impl.bzl  test.sh.tpl
external_workspaces/: tinyxml2.build
info_binary/: BUILD  info_binary_main.cc
lib/: BUILD  comp_test.cc  comp_test.hh  static_test.hh
lib/private/: BUILD  dev.cc  support.cc  support.hh
readme_sample/: BUILD.bazel  readme_sample.cc
rules/: BUILD  cc_comp_test.bzl  cc_static_test.bzl  pretend_test_binary.sh.tpl  test.sh.tpl
rules/info_binary/: BUILD  info_binary_main.cc
rules/static_tester/: BUILD  code.hh  compiler.hh  junit.hh  log.hh  static_tester.cc  test_case_run.hh  test_suite.hh  test_suite_run.hh  trest.hh  util.hh
rules/test_runner/: BUILD  executable.hh  junit.hh  log.hh  test_runner.cc  test_suite_run.hh
sample/: BUILD  sample.cc  test.cc
test_runner/: BUILD  code.hh  compiler.hh  executable.hh  junit.hh  log.hh  test_case_run.hh  test_runner.cc  test_suite.hh  test_suite_run.hh  util.hh
