load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

refresh_compile_commands(
    name = "compdb",
    exclude_external_sources = True,
    exclude_headers = "external",
    targets = {
        "//...": "",
    },
)

refresh_compile_commands(
    name = "compdb_codechecker",
    exclude_external_sources = True,
    exclude_headers = "all",
    targets = {
        "//test_runner:test_runner": "",
    },
)

toolchain(
    name = "linux_clang",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":llvm_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)
